--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import sklearn as skl"
    ]
   },
@@ -35,17 +36,159 @@
   },
   {
    "source": [
-    "## Selecting Relevant Fields"
+    "## Selecting Relevant Fields\n",
+    "the dataset will be loaded and transformed and relevant dimensions will remain"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('database.csv', nrows=1000)[[\n",
+    "    'NAME_CONTRACT_STATUS',\n",
+    "    'CODE_GENDER',\n",
+    "    'FLAG_OWN_CAR',\n",
+    "    'FLAG_OWN_REALTY',\n",
+    "    'CNT_CHILDREN',\n",
+    "    'AMT_INCOME_TOTAL',\n",
+    "    'AMT_CREDIT',\n",
+    "    'NAME_INCOME_TYPE',\n",
+    "    'NAME_EDUCATION_TYPE',\n",
+    "    'NAME_FAMILY_STATUS',\n",
+    "    'NAME_HOUSING_TYPE',\n",
+    "    'DAYS_BIRTH',\n",
+    "    'DAYS_EMPLOYED',\n",
+    "    'OCCUPATION_TYPE',\n",
+    "    'CNT_FAM_MEMBERS'\n",
+    "]]\n",
+    "\n",
+    "# df"
+   ]
+  },
+  {
+   "source": [
+    "## Reductions to binary variables\n",
+    "\n",
+    "The target variable, NAME_CONTRACT_STATUS, will be reduced from one of 4 possible values, to one of two generic but still correct values – for example, the dataset distingushes between cancelled and rejected and granted loans, however we will only distinguish between granted and not granted loans. Values that are binary but that don't use the binary alphabet will be transformed to use the binary alphabet as well.\n",
+    "\n",
+    "Defining a function that will return a copy of the dataframe with reduced fields."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@purpose: for each cell, cell = 1 if cell == @value else 0\n",
+    "def reduce(df, name, value):\n",
+    "    if type(name) != str:\n",
+    "        raise Exception('only one dimension is reduced at a time')\n",
+    "    idx_name = df.columns.get_loc(name)\n",
+    "    reduced = [(1 if df[name][i] == value else 0) for i in range(len(df))]\n",
+    "    df_reduced = df.drop(labels=[name], axis=1)\n",
+    "    df_reduced.insert(loc=idx_name, column=name, value=reduced)\n",
+    "    return df_reduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0 = reduce(df, 'NAME_CONTRACT_STATUS', 'APPROVED')  # 1 if approved else 0\n",
+    "df1 = reduce(df0, 'CODE_GENDER', 'M')  # 1 if male else 0\n",
+    "df2 = reduce(df1, 'FLAG_OWN_CAR', 'Y')  # 1 if owns car else 0\n",
+    "df3 = reduce(df2, 'FLAG_OWN_REALTY', 'Y')  # 1 if owns property else 0\n",
+    "#df3"
+   ]
+  },
+  {
+   "source": [
+    "## One-Hot Encoding\n",
+    "defining a function that returns a copy of the input dataframe with a specific dimension one-hot encoded"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def one_hot_encode(df, name):\n",
+    "    if type(name) != str:\n",
+    "        raise Exception('one hot encoding applies to one dimension at a time')\n",
+    "    if len(df) == 0:\n",
+    "        raise Exception('dataframe is empty')\n",
+    "    \n",
+    "    df = df.copy()\n",
+    "    values = df[name].unique()\n",
+    "    \n",
+    "    #for each unique value, we create a new column where df[row][new column] is 1 if the value of df[row][value] == new column\n",
+    "    for v in values:\n",
+    "        one_hot_column = [(1 if df[name][i] == v else 0) for i in range(len(df))]\n",
+    "        df.insert(loc=len(df.loc[0]), column=v, value=one_hot_column)\n",
+    "\n",
+    "    return df.drop(labels=[name], axis=1)"
+   ]
+  },
+  {
+   "source": [
+    "performing one-hot encoding on any dimension whose values are one of a set of string values"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = one_hot_encode(df3, 'NAME_INCOME_TYPE')\n",
+    "df5 = one_hot_encode(df4, 'NAME_EDUCATION_TYPE')\n",
+    "df6 = one_hot_encode(df5, 'NAME_FAMILY_STATUS')\n",
+    "df7 = one_hot_encode(df6, 'NAME_HOUSING_TYPE')\n",
+    "df8 = one_hot_encode(df7, 'OCCUPATION_TYPE')\n",
+    "\n",
+    "#df8"
+   ]
+  },
+  {
+   "source": [
+    "# Training the models"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## One-Hot Encoding"
+    "## Split the dataframe into X and y as numpy arrays"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_as_array = np.array(df8)\n",
+    "X = dataset_as_array[:,1:]\n",
+    "y = dataset_as_array[:,0]"
+   ]
   }
  ]
 }
