--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#TODO: remove the nrows argument when done testing\n",
     "df = pd.read_csv('database.csv', nrows=1000)[[\n",
     "    'NAME_CONTRACT_STATUS',\n",
     "    'CODE_GENDER',\n",
@@ -64,9 +65,7 @@
     "    'DAYS_EMPLOYED',\n",
     "    'OCCUPATION_TYPE',\n",
     "    'CNT_FAM_MEMBERS'\n",
-    "]]\n",
-    "\n",
-    "# df"
+    "]]"
    ]
   },
   {
@@ -82,11 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@purpose: for each cell, cell = 1 if cell == @value else 0\n",
     "def reduce(df, name, value):\n",
     "    if type(name) != str:\n",
     "        raise Exception('only one dimension is reduced at a time')\n",
@@ -99,15 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df0 = reduce(df, 'NAME_CONTRACT_STATUS', 'APPROVED')  # 1 if approved else 0\n",
     "df1 = reduce(df0, 'CODE_GENDER', 'M')  # 1 if male else 0\n",
     "df2 = reduce(df1, 'FLAG_OWN_CAR', 'Y')  # 1 if owns car else 0\n",
-    "df3 = reduce(df2, 'FLAG_OWN_REALTY', 'Y')  # 1 if owns property else 0\n",
-    "#df3"
+    "df3 = reduce(df2, 'FLAG_OWN_REALTY', 'Y')  # 1 if owns property else 0"
    ]
   },
   {
@@ -120,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +157,7 @@
     "df5 = one_hot_encode(df4, 'NAME_EDUCATION_TYPE')\n",
     "df6 = one_hot_encode(df5, 'NAME_FAMILY_STATUS')\n",
     "df7 = one_hot_encode(df6, 'NAME_HOUSING_TYPE')\n",
-    "df8 = one_hot_encode(df7, 'OCCUPATION_TYPE')\n",
-    "\n",
-    "#df8"
+    "df8 = one_hot_encode(df7, 'OCCUPATION_TYPE')"
    ]
   },
   {
@@ -181,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
