Test class for organizing tests

--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -18,13 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import sklearn as skl"
+    "import numpy as np"
    ]
   },
   {
@@ -44,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO: remove the nrows argument when done testing\n",
-    "df = pd.read_csv('database.csv', nrows=1000)[[\n",
+    "df = pd.read_csv('database.csv', nrows=2500)[[\n",
     "    'NAME_CONTRACT_STATUS',\n",
     "    'CODE_GENDER',\n",
     "    'FLAG_OWN_CAR',\n",
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,14 +174,179 @@
    "metadata": {}
   },
   {
+   "source": [
+    "convert the dataframe into a numpy tensor"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_as_array = np.array(df8)\n",
     "X = dataset_as_array[:,1:]\n",
-    "y = dataset_as_array[:,0]"
+    "y = dataset_as_array[:,0].reshape((-1,1))"
+   ]
+  },
+  {
+   "source": [
+    "normalize the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "X_norm = preprocessing.normalize(X)\n",
+    "y_norm = preprocessing.normalize(y)"
+   ]
+  },
+  {
+   "source": [
+    "## Creating the test class\n",
+    "We will create a class that collects everything we need to build and to analyze a model. The class will point to our data, and to a model building algorithm, and will provide functionality for presenting results."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "class Test:\n",
+    "    def __init__(self, name, X, y, algorithm, args):\n",
+    "        self.name = name\n",
+    "        self.X = X  #pointer, not copy\n",
+    "        self.y = y\n",
+    "        self.algorithm = algorithm\n",
+    "        self.args = args\n",
+    "    \n",
+    "    def run(self, split=0.8):\n",
+    "        X_train, X_test = train_test_split(X_norm, train_size=split, test_size=(1.0-split))\n",
+    "        y_train, y_test = train_test_split(y_norm, train_size=split, test_size=(1.0-split))\n",
+    "        model = self.algorithm(**self.args)\n",
+    "        model.fit(X_train, y_train.ravel())\n",
+    "        acc_train = model.score(X_train,y_train)\n",
+    "        acc_test = model.score(X_test,y_test)\n",
+    "        return acc_train, acc_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tests = []"
+   ]
+  },
+  {
+   "source": [
+    "## Support Vector Machine Modelling\n",
+    "The motivation behind support vector machines is that we are building a line of best fit between two datasets, where \"best\" is defined by an objective function of distance between our line of best fit and between critical points, called support vectors, of these datasets. Support vectors are the closest points to a line of best fit. Our best fit line is also a decision boundary."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_svm_lin = Test(\n",
+    "    name='SVM linear',\n",
+    "    X=X_norm,\n",
+    "    y=y_norm,\n",
+    "    algorithm=svm.SVC,\n",
+    "    args={'probability': False, 'kernel': 'linear', 'C': 1}\n",
+    ")\n",
+    "\n",
+    "test_svm_rbf = Test(\n",
+    "    name='SVM rbf',\n",
+    "    X=X_norm,\n",
+    "    y=y_norm,\n",
+    "    algorithm=svm.SVC,\n",
+    "    args={'probability': False, 'kernel': 'rbf', 'C': 1}\n",
+    ")\n",
+    "\n",
+    "test_svm_poly = Test(\n",
+    "    name='SVM poly',\n",
+    "    X=X_norm,\n",
+    "    y=y_norm,\n",
+    "    algorithm=svm.SVC,\n",
+    "    args={'probability': False, 'kernel': 'poly', 'C': 1}\n",
+    ")\n",
+    "\n",
+    "tests.append(test_svm_lin)\n",
+    "tests.append(test_svm_rbf)\n",
+    "tests.append(test_svm_poly)"
+   ]
+  },
+  {
+   "source": [
+    "### Run tests"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "\n",
+      "SVM linear\n",
+      "==========\n",
+      "Training accuracy: 0.65\n",
+      "Test accuracy: 0.624\n",
+      "\n",
+      "\n",
+      "SVM rbf\n",
+      "==========\n",
+      "Training accuracy: 0.637\n",
+      "Test accuracy: 0.676\n",
+      "\n",
+      "\n",
+      "SVM poly\n",
+      "==========\n",
+      "Training accuracy: 0.6415\n",
+      "Test accuracy: 0.658\n"
+     ]
+    }
+   ],
+   "source": [
+    "for test in tests:\n",
+    "    print(f'\\n\\n{test.name}\\n' + '='*10)\n",
+    "    acc_train, acc_test = test.run()\n",
+    "    print(f'Training accuracy: {acc_train}')\n",
+    "    print(f'Test accuracy: {acc_test}')"
    ]
   },
   {
