tests arrays are created inline

--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -244,15 +244,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tests = []"
-   ]
-  },
-  {
    "source": [
     "## Support Vector Machine Modelling\n",
     "The motivation behind support vector machines is that we are building a line of best fit between two datasets, where \"best\" is defined by an objective function of distance between our line of best fit and between critical points, called support vectors, of these datasets. Support vectors are the closest points to a line of best fit. Our best fit line is also a decision boundary."
@@ -271,37 +262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_svm_lin = Test(\n",
-    "    name='SVM linear',\n",
-    "    X=X_norm,\n",
-    "    y=y_norm,\n",
-    "    algorithm=svm.SVC,\n",
-    "    args={'probability': False, 'kernel': 'linear', 'C': 1}\n",
-    ")\n",
-    "\n",
-    "test_svm_rbf = Test(\n",
-    "    name='SVM rbf',\n",
-    "    X=X_norm,\n",
-    "    y=y_norm,\n",
-    "    algorithm=svm.SVC,\n",
-    "    args={'probability': False, 'kernel': 'rbf', 'C': 1}\n",
-    ")\n",
-    "\n",
-    "test_svm_poly = Test(\n",
-    "    name='SVM poly',\n",
-    "    X=X_norm,\n",
-    "    y=y_norm,\n",
-    "    algorithm=svm.SVC,\n",
-    "    args={'probability': False, 'kernel': 'poly', 'C': 1}\n",
-    ")\n",
-    "\n",
-    "tests.append(test_svm_lin)\n",
-    "tests.append(test_svm_rbf)\n",
-    "tests.append(test_svm_poly)"
+    "svm_tests = [\n",
+    "    Test(\n",
+    "        name='SVM linear',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'linear', 'C': 1}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM rbf',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'rbf', 'C': 1}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM poly',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'poly', 'C': 1}\n",
+    "    )\n",
+    "]"
    ]
   },
   {
@@ -313,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -324,20 +311,38 @@
       "\n",
       "SVM linear\n",
       "==========\n",
-      "Training accuracy: 0.65\n",
-      "Test accuracy: 0.624\n",
+      "Training accuracy: 0.6485\n",
+      "Test accuracy: 0.63\n",
       "\n",
       "\n",
       "SVM rbf\n",
       "==========\n",
-      "Training accuracy: 0.637\n",
-      "Test accuracy: 0.676\n",
+      "Training accuracy: 0.647\n",
+      "Test accuracy: 0.636\n",
       "\n",
       "\n",
       "SVM poly\n",
       "==========\n",
       "Training accuracy: 0.6415\n",
-      "Test accuracy: 0.658\n"
+      "Test accuracy: 0.658\n",
+      "\n",
+      "\n",
+      "SVM linear\n",
+      "==========\n",
+      "Training accuracy: 0.64\n",
+      "Test accuracy: 0.664\n",
+      "\n",
+      "\n",
+      "SVM rbf\n",
+      "==========\n",
+      "Training accuracy: 0.6495\n",
+      "Test accuracy: 0.626\n",
+      "\n",
+      "\n",
+      "SVM poly\n",
+      "==========\n",
+      "Training accuracy: 0.642\n",
+      "Test accuracy: 0.656\n"
      ]
     }
    ],
