--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +287,48 @@
     "        y=y_norm,\n",
     "        algorithm=svm.SVC,\n",
     "        args={'probability': False, 'kernel': 'poly', 'C': 1}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM linear low C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'linear', 'C': 0.001}\n",
+    "    ),\n",
+    "        Test(\n",
+    "        name='SVM rbf low C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'rbf', 'C': 0.001}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM poly low C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'poly', 'C': 0.001}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM linear high C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'linear', 'C': 1000}\n",
+    "    ),\n",
+    "        Test(\n",
+    "        name='SVM rbf high C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'rbf', 'C': 1000}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM poly high C',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'poly', 'C': 1000}\n",
     "    )\n",
     "]"
    ]
@@ -300,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -311,43 +353,61 @@
       "\n",
       "SVM linear\n",
       "==========\n",
-      "Training accuracy: 0.6485\n",
-      "Test accuracy: 0.63\n",
+      "Training accuracy: 0.652\n",
+      "Test accuracy: 0.616\n",
       "\n",
       "\n",
       "SVM rbf\n",
-      "==========\n",
-      "Training accuracy: 0.647\n",
-      "Test accuracy: 0.636\n",
-      "\n",
-      "\n",
-      "SVM poly\n",
-      "==========\n",
-      "Training accuracy: 0.6415\n",
-      "Test accuracy: 0.658\n",
-      "\n",
-      "\n",
-      "SVM linear\n",
       "==========\n",
       "Training accuracy: 0.64\n",
       "Test accuracy: 0.664\n",
       "\n",
       "\n",
-      "SVM rbf\n",
-      "==========\n",
-      "Training accuracy: 0.6495\n",
-      "Test accuracy: 0.626\n",
-      "\n",
-      "\n",
       "SVM poly\n",
       "==========\n",
+      "Training accuracy: 0.648\n",
+      "Test accuracy: 0.632\n",
+      "\n",
+      "\n",
+      "SVM linear low C\n",
+      "==========\n",
+      "Training accuracy: 0.6435\n",
+      "Test accuracy: 0.65\n",
+      "\n",
+      "\n",
+      "SVM rbf low C\n",
+      "==========\n",
+      "Training accuracy: 0.644\n",
+      "Test accuracy: 0.648\n",
+      "\n",
+      "\n",
+      "SVM poly low C\n",
+      "==========\n",
+      "Training accuracy: 0.6445\n",
+      "Test accuracy: 0.646\n",
+      "\n",
+      "\n",
+      "SVM linear high C\n",
+      "==========\n",
       "Training accuracy: 0.642\n",
-      "Test accuracy: 0.656\n"
+      "Test accuracy: 0.656\n",
+      "\n",
+      "\n",
+      "SVM rbf high C\n",
+      "==========\n",
+      "Training accuracy: 0.6425\n",
+      "Test accuracy: 0.664\n",
+      "\n",
+      "\n",
+      "SVM poly high C\n",
+      "==========\n",
+      "Training accuracy: 0.6415\n",
+      "Test accuracy: 0.658\n"
      ]
     }
    ],
    "source": [
-    "for test in tests:\n",
+    "for test in svm_tests:\n",
     "    print(f'\\n\\n{test.name}\\n' + '='*10)\n",
     "    acc_train, acc_test = test.run()\n",
     "    print(f'Training accuracy: {acc_train}')\n",
