examples of using the test class

--- a/model-selection.ipynb
+++ b/model-selection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 210,
    "metadata": {
     "tags": []
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,88 +261,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "svm_tests = [\n",
-    "    Test(\n",
-    "        name='SVM linear',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'linear', 'C': 1}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM rbf',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'rbf', 'C': 1}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM poly',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'poly', 'C': 1}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM linear low C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'linear', 'C': 0.001}\n",
-    "    ),\n",
-    "        Test(\n",
-    "        name='SVM rbf low C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'rbf', 'C': 0.001}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM poly low C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'poly', 'C': 0.001}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM linear high C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'linear', 'C': 1000}\n",
-    "    ),\n",
-    "        Test(\n",
-    "        name='SVM rbf high C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'rbf', 'C': 1000}\n",
-    "    ),\n",
-    "    Test(\n",
-    "        name='SVM poly high C',\n",
-    "        X=X_norm,\n",
-    "        y=y_norm,\n",
-    "        algorithm=svm.SVC,\n",
-    "        args={'probability': False, 'kernel': 'poly', 'C': 1000}\n",
-    "    )\n",
-    "]"
-   ]
-  },
-  {
-   "source": [
-    "### Run tests"
+    "### Tests comparing the three kernels"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_basic_tests = [\n",
+    "    Test(\n",
+    "        name='SVM linear',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'linear', 'C': 100}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM rbf',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'rbf', 'C': 100}\n",
+    "    ),\n",
+    "    Test(\n",
+    "        name='SVM poly',\n",
+    "        X=X_norm,\n",
+    "        y=y_norm,\n",
+    "        algorithm=svm.SVC,\n",
+    "        args={'probability': False, 'kernel': 'poly', 'C': 100}\n",
+    "    ),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -353,62 +311,122 @@
       "\n",
       "SVM linear\n",
       "==========\n",
-      "Training accuracy: 0.652\n",
-      "Test accuracy: 0.616\n",
+      "Training accuracy: 0.6315\n",
+      "Test accuracy: 0.698\n",
       "\n",
       "\n",
       "SVM rbf\n",
-      "==========\n",
-      "Training accuracy: 0.64\n",
-      "Test accuracy: 0.664\n",
+      "=======\n",
+      "Training accuracy: 0.649\n",
+      "Test accuracy: 0.628\n",
       "\n",
       "\n",
       "SVM poly\n",
-      "==========\n",
-      "Training accuracy: 0.648\n",
-      "Test accuracy: 0.632\n",
-      "\n",
-      "\n",
-      "SVM linear low C\n",
-      "==========\n",
-      "Training accuracy: 0.6435\n",
-      "Test accuracy: 0.65\n",
-      "\n",
-      "\n",
-      "SVM rbf low C\n",
-      "==========\n",
-      "Training accuracy: 0.644\n",
-      "Test accuracy: 0.648\n",
-      "\n",
-      "\n",
-      "SVM poly low C\n",
-      "==========\n",
-      "Training accuracy: 0.6445\n",
-      "Test accuracy: 0.646\n",
-      "\n",
-      "\n",
-      "SVM linear high C\n",
-      "==========\n",
-      "Training accuracy: 0.642\n",
-      "Test accuracy: 0.656\n",
-      "\n",
-      "\n",
-      "SVM rbf high C\n",
-      "==========\n",
-      "Training accuracy: 0.6425\n",
-      "Test accuracy: 0.664\n",
-      "\n",
-      "\n",
-      "SVM poly high C\n",
-      "==========\n",
-      "Training accuracy: 0.6415\n",
-      "Test accuracy: 0.658\n"
+      "========\n",
+      "Training accuracy: 0.6495\n",
+      "Test accuracy: 0.626\n"
      ]
     }
    ],
    "source": [
-    "for test in svm_tests:\n",
-    "    print(f'\\n\\n{test.name}\\n' + '='*10)\n",
+    "for test in svm_basic_tests:\n",
+    "    print(f'\\n\\n{test.name}\\n' + '='*len(test.name))\n",
+    "    acc_train, acc_test = test.run()\n",
+    "    print(f'Training accuracy: {acc_train}')\n",
+    "    print(f'Test accuracy: {acc_test}')"
+   ]
+  },
+  {
+   "source": [
+    "### Tests comparing different degrees of the polynomial kernel"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_poly_tests = [Test(name=f'SVM poly of degree {i}', X=X_norm, y=y_norm, algorithm=svm.SVC, args={'probability': False, 'kernel': 'poly', 'C': 0.001, 'degree': i}) for i in range(1,11)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "\n",
+      "SVM poly of degree 1\n",
+      "====================\n",
+      "Training accuracy: 0.6415\n",
+      "Test accuracy: 0.658\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 2\n",
+      "====================\n",
+      "Training accuracy: 0.647\n",
+      "Test accuracy: 0.636\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 3\n",
+      "====================\n",
+      "Training accuracy: 0.652\n",
+      "Test accuracy: 0.616\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 4\n",
+      "====================\n",
+      "Training accuracy: 0.6445\n",
+      "Test accuracy: 0.646\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 5\n",
+      "====================\n",
+      "Training accuracy: 0.648\n",
+      "Test accuracy: 0.632\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 6\n",
+      "====================\n",
+      "Training accuracy: 0.6485\n",
+      "Test accuracy: 0.63\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 7\n",
+      "====================\n",
+      "Training accuracy: 0.639\n",
+      "Test accuracy: 0.668\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 8\n",
+      "====================\n",
+      "Training accuracy: 0.633\n",
+      "Test accuracy: 0.692\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 9\n",
+      "====================\n",
+      "Training accuracy: 0.644\n",
+      "Test accuracy: 0.648\n",
+      "\n",
+      "\n",
+      "SVM poly of degree 10\n",
+      "=====================\n",
+      "Training accuracy: 0.6345\n",
+      "Test accuracy: 0.686\n"
+     ]
+    }
+   ],
+   "source": [
+    "for test in svm_poly_tests:\n",
+    "    print(f'\\n\\n{test.name}\\n' + '='*len(test.name))\n",
     "    acc_train, acc_test = test.run()\n",
     "    print(f'Training accuracy: {acc_train}')\n",
     "    print(f'Test accuracy: {acc_test}')"
